--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -1,10 +1,12 @@
-@import 'src/styles/index.scss';
+@import '../../styles';
 
 header {
   @include flex-center;
   justify-content: space-between;
-  position: absolute;
+  position: fixed;
+  top: 0px;
   width: 100%;
+  background-color: $background-blue;
 
   .logo {
     width: 10rem;
