--- a/client/src/styles/base.scss
+++ b/client/src/styles/base.scss
@@ -1,7 +1,9 @@
 @import 'normalize.css';
+@import './common';
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: $font-family;
 }
