--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -3,3 +3,8 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin flex-direct($direction) {
+  display: flex;
+  flex-direction: $direction;
+}
