--- a/client/src/styles/_common.scss
+++ b/client/src/styles/_common.scss
@@ -17,7 +17,7 @@ $background-blue: rgba(36, 105, 188, 0.504);
 $background-wheat: rgb(245, 222, 178);
 
 // font color (darker)
-$font-color-p: rgb(85, 85, 85);
+$font-color: rgb(85, 85, 85);
 
 // font family
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
