fix: change className by using kebab-case

--- a/client/src/components/Home/home.scss
+++ b/client/src/components/Home/home.scss
@@ -37,7 +37,7 @@
     }
   }
 
-  .roleIntro {
+  .role-intro {
     background-color: $secondary-yellow;
 
     .role {
@@ -64,7 +64,7 @@
 
         p {
           font-size: 1.2rem;
-          color: $font-color-p;
+          color: $font-color;
           text-indent: 2rem;
           line-height: 1.5rem;
           padding: 0.5rem;
