--- a/client/src/styles/_common.scss
+++ b/client/src/styles/_common.scss
@@ -20,6 +20,5 @@ $background-wheat: rgb(245, 222, 178);
 $font-color: rgb(85, 85, 85);
 
 // font family
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-
-$font-family: 'PT Sans', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+$font-family: 'Rubik', sans-serif;
