--- a/client/src/styles/_common.scss
+++ b/client/src/styles/_common.scss
@@ -14,6 +14,7 @@ $secondary-yellow: hsl(39, 76%, 70%);
 
 // background color (increase opacity)
 $background-blue: rgba(36, 105, 188, 0.504);
+$background-black: rgba(0, 0, 0, 0.3);
 $background-wheat: rgb(245, 222, 178);
 
 // font color (darker)
