feat: change hover color of nav item

--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -29,7 +29,7 @@ header {
         padding: 0 1rem;
 
         &:hover {
-          color: $primary-black;
+          color: $primary-yellow;
         }
 
         a {
@@ -37,7 +37,7 @@ header {
           text-decoration: none;
 
           &:hover {
-            color: $primary-black;
+            color: $primary-yellow;
           }
         }
       }
