--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -6,41 +6,68 @@ footer {
   section {
     // border: 2px solid blue; // 輔助線
     display: flex;
+    flex-wrap: wrap;
+    padding: 0.25rem;
 
     .logo-area {
       //   border: 2px solid red; // 輔助線
       padding: 1rem;
+      flex: 2 1 300px;
 
       .logo {
+        margin: 0 0 0 0.5rem;
         img {
           width: 30%;
         }
       }
       .short-description {
         font-size: 1.25rem;
+        padding: 1rem;
       }
       .contact-icons {
         display: flex;
+        padding: 0rem 1rem;
+        .instagram {
+          padding: 0 0.75rem;
+        }
+        .youtube {
+          padding: 0 0 0 0.75rem;
+        }
       }
     }
 
     .topics {
       //   border: 2px solid green; // 輔助線
-      padding: 1rem;
+      padding: 1.5rem;
+      flex: 1 1 0px;
 
       ul {
         list-style-type: none;
+        li {
+          padding: 0.25rem 0;
+        }
       }
     }
 
     .get-in-touch {
       //   border: 2px solid blueviolet; // 輔助線
-      padding: 1rem;
+      padding: 1.5rem;
+      flex: 1.5 1 0px;
+      p {
+        padding: 0.25rem 0;
+      }
     }
   }
 }
 
 h4 {
   font-size: 1.75rem;
-  padding: 0.5rem 0rem;
+  padding: 1rem 0rem;
+  white-space: nowrap;
 }
+
+.copyright {
+  padding: 0.25rem;
+  text-align: right;
+}
+// 這個單獨拉下來是ok的嗎 還是一定要放在巢狀內部呢?
