feat: gallery finished

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -57,6 +57,10 @@
   }
   .gallery {
     display: flex;
+    justify-content: space-evenly;
+    div {
+      padding: 1rem;
+    }
   }
   .role-intro {
     background-color: $secondary-yellow;
