chore: change image's name & className

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -67,7 +67,7 @@
 
     align-items: center;
     padding: 0.5rem 3rem;
-    .user-photo-feedback-use {
+    .feedback-photo {
       flex: 1 1 300px;
       display: flex;
       justify-content: center;
