chore: change color

--- a/client/src/styles/_common.scss
+++ b/client/src/styles/_common.scss
@@ -15,7 +15,7 @@ $secondary-yellow: hsl(39, 76%, 70%);
 // background color (increase opacity)
 $background-blue: rgba(36, 105, 188, 0.504);
 $background-black: rgba(0, 0, 0, 0.7);
-$background-wheat: rgb(245, 222, 178);
+$background-gray: rgb(219, 219, 219);
 
 // font color (darker)
 $font-color: rgb(85, 85, 85);
