--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,6 +1,9 @@
 @import '../../styles';
 
 .home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   .banner {
     @include flex-center;
     background-image: url('../../assets/images/banner-bg.png');
@@ -53,77 +56,77 @@
       }
     }
   }
-  .gallery {
+  .content-container {
+    width: min(80%, 1200px);
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    div {
-      padding: 1rem;
-    }
-  }
-  .feedback {
-    display: flex;
-    flex-wrap: wrap;
-
-    align-items: center;
-    padding: 0.5rem 3rem;
-    .feedback-photo {
-      flex: 1 1 300px;
-      display: flex;
-      justify-content: center;
-      padding: 0 0 0 2rem;
-      img {
-        width: 70%;
-      }
-    }
-    .feedback-content {
-      flex: 1 1 500px;
-      padding: 1rem 4rem 0 0;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      h6 {
-        font-weight: 800;
-        margin: 0 0 1rem 0;
-      }
-      p {
-        color: $font-color;
-        font-size: 1.5rem;
-      }
-    }
-  }
-  .role-intro {
-    background-color: $secondary-yellow;
-
-    .role {
-      // border: 2px solid red; // 輔助線
+    flex-direction: column;
+    gap: 2rem;
+    .gallery {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
-
+      justify-content: space-evenly;
       div {
-        // border: 2px solid green; // 輔助線
+        @include flex-center;
+        padding: 1.5rem 1rem;
+      }
+    }
+    .feedback {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      gap: 1rem;
+      .feedback-photo {
+        flex: 1 1 15rem;
+        text-align: center;
+        img {
+          width: 100%;
+          max-width: 25rem;
+        }
+      }
+      .feedback-content {
+        flex: 1 1 30rem;
+        // padding: 1rem 4rem 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        h6 {
+          font-weight: 800;
+          margin: 0 0 1rem 0;
+        }
+        p {
+          color: $font-color;
+          font-size: 1.5rem;
+        }
+      }
+    }
+    .role-intro {
+      background-color: $background-gray;
+      padding: 0.5rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      div {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-
         flex-direction: column;
-        margin: 1rem;
         flex: 1 1 300px;
-        background-color: $background-wheat;
-
+        background-color: $primary-white;
+        padding: 1rem 0.5rem;
+        gap: 1.5rem;
         h2 {
           font-size: 1.6rem;
-          padding: 0.5rem 0rem;
         }
-
         p {
+          flex-grow: 1;
           font-size: 1.2rem;
           color: $font-color;
           text-indent: 2rem;
           line-height: 1.5rem;
-          padding: 0.5rem;
           text-align: center;
+        }
+        .customize-button {
+          font-size: 1rem;
         }
       }
     }
