--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -61,6 +61,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    padding: 1rem 0;
     .gallery {
       display: flex;
       flex-wrap: wrap;
@@ -78,14 +79,17 @@
       .feedback-photo {
         flex: 1 1 15rem;
         text-align: center;
+
         img {
           width: 100%;
           max-width: 25rem;
+          border-radius: 50%;
+          box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+            rgba(0, 0, 0, 0.22) 0px 10px 10px;
         }
       }
       .feedback-content {
         flex: 1 1 30rem;
-        // padding: 1rem 4rem 0 0;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -95,7 +99,8 @@
         }
         p {
           color: $font-color;
-          font-size: 1.5rem;
+          font-size: 1.75rem;
+          line-height: 2.25rem;
         }
       }
     }
