feat: unify font-size and add z-index function

--- a/client/src/components/Button/button.scss
+++ b/client/src/components/Button/button.scss
@@ -6,7 +6,7 @@
   border-radius: 1.5rem;
   border: none;
   outline: none;
-  font-size: 1.5rem;
+  font-size: $font-size-base;
   padding: 0.5rem 2rem;
   white-space: nowrap;
   cursor: pointer;
