--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,4 +1,4 @@
-@import '../../styles/';
+@import '../../styles';
 
 .home {
   .banner {
@@ -10,19 +10,18 @@
     padding: 10rem 0;
 
     .introduction {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-      justify-items: center;
+      @include flex-center;
+      flex-wrap: wrap;
       width: 90%;
-      margin: auto;
       gap: 2rem;
     }
 
     .slogan {
+      flex: 1 1 25rem;
       color: $primary-white;
 
       h1 {
-        font-size: 3.5rem;
+        font-size: $font-size-h1;
         margin-bottom: 2rem;
         // overflow: hidden;
         // white-space: nowrap;
@@ -32,7 +31,7 @@
       }
 
       p {
-        font-size: 1.2rem;
+        font-size: $font-size-h5;
         line-height: 2rem;
       }
       .action {
@@ -45,8 +44,7 @@
 
     .video-container {
       @include flex-center;
-      // border: 1px solid red;
-      max-width: 40rem;
+      flex: 1 1 25rem;
 
       video {
         width: 100%;
