--- a/client/src/styles/_common.scss
+++ b/client/src/styles/_common.scss
@@ -14,12 +14,17 @@ $secondary-yellow: hsl(39, 76%, 70%);
 
 // background color (increase opacity)
 $background-blue: rgba(36, 105, 188, 0.504);
-$background-black: rgba(0, 0, 0, 0.3);
+$background-black: rgba(0, 0, 0, 0.7);
 $background-wheat: rgb(245, 222, 178);
 
 // font color (darker)
 $font-color: rgb(85, 85, 85);
 
-// font family
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-$font-family: 'Rubik', sans-serif;
+// font Size
+$font-size-base: 1rem; // 16px
+$font-size-sm: calc(0.75 * $font-size-base); // 12px
+$font-size-h5: calc(1.25 * $font-size-base); // 20px
+$font-size-h4: calc(1.5 * $font-size-base); // 24px
+$font-size-h3: calc(1.75 * $font-size-base); // 28px
+$font-size-h2: calc(2 * $font-size-base); // 32px
+$font-size-h1: calc(2.25 * $font-size-base); // 36px
