--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -57,15 +57,15 @@
     }
   }
   .content-container {
-    width: min(80%, 1200px);
+    width: min(85%, 1200px);
     display: flex;
     flex-direction: column;
-    gap: 2rem;
-    padding: 1rem 0;
+    gap: 6rem;
     .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-evenly;
+      padding: 3rem 0 0 0;
       div {
         @include flex-center;
         padding: 1.5rem 1rem;
@@ -104,6 +104,46 @@
         }
       }
     }
+    .featured-course {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2rem;
+      > div {
+        flex: 1 1 25rem;
+      }
+      .featured-course-img {
+        img {
+          width: 100%;
+          border-radius: 1rem;
+        }
+      }
+      .featured-course-content {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        line-height: 2rem;
+        h6 {
+          letter-spacing: 0.2rem;
+        }
+        h2 {
+          line-height: 3rem;
+        }
+        > p {
+          font-weight: 800;
+        }
+        .list {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          > div {
+            width: 50%;
+          }
+        }
+        .start-course {
+          align-self: flex-start;
+        }
+      }
+    }
     .role-intro {
       background-color: $background-gray;
       padding: 0.5rem;
@@ -136,6 +176,21 @@
       }
     }
   }
+}
+
+.circle-icon {
+  color: $primary-yellow;
+  margin: 0 0.5rem 0 0;
+}
+.circle-check-icon {
+  color: $primary-blue;
+  margin: 0 0.5rem 0 0;
+}
+.user-icon {
+  color: $primary-yellow;
+}
+.hourglass-icon {
+  color: $font-color;
 }
 
 @keyframes typing {
