--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -184,6 +184,27 @@
         }
       }
     }
+    .testimonial {
+      .testimonial-carousel {
+        display: flex;
+        flex-wrap: wrap;
+        .testimonial-card {
+          max-width: 35rem;
+          padding: 2rem;
+          .testimonial-card-img {
+            img {
+              border-radius: 1rem;
+            }
+          }
+          p {
+            padding: 2rem 0;
+            font-size: 1.05rem;
+            line-height: 2rem;
+            font-weight: 600;
+          }
+        }
+      }
+    }
   }
 }
 
