chore: add fake data for user1-8

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -214,6 +214,7 @@
           .testimonial-card-img {
             img {
               border-radius: 1rem;
+              width: 5rem;
             }
           }
           p {
