--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,5 +1,25 @@
 @import '../../styles';
 
+.circle-icon {
+  color: $primary-yellow;
+  margin: 0 0.5rem 0 0;
+}
+.circle-check-icon {
+  color: $primary-blue;
+  margin: 0 0.5rem 0 0;
+}
+.user-icon {
+  color: $primary-yellow;
+  margin: 0 0.5rem 0 0;
+}
+.hourglass-icon {
+  color: $font-color;
+  margin: 0 0.5rem 0 0;
+}
+.right-arrow-icon {
+  color: $primary-black;
+}
+
 .home {
   display: flex;
   flex-direction: column;
@@ -123,6 +143,13 @@
             display: flex;
             align-items: flex-end;
             gap: 0.5rem;
+            cursor: pointer;
+            &:hover {
+              color: $primary-yellow;
+              .right-arrow-icon {
+                color: $primary-yellow;
+              }
+            }
           }
         }
       }
@@ -242,26 +269,6 @@
       }
     }
   }
-}
-
-.circle-icon {
-  color: $primary-yellow;
-  margin: 0 0.5rem 0 0;
-}
-.circle-check-icon {
-  color: $primary-blue;
-  margin: 0 0.5rem 0 0;
-}
-.user-icon {
-  color: $primary-yellow;
-  margin: 0 0.5rem 0 0;
-}
-.hourglass-icon {
-  color: $font-color;
-  margin: 0 0.5rem 0 0;
-}
-.rightArrowIcon {
-  color: $primary-black;
 }
 
 @keyframes typing {
