feat: modal login & register (not yet)

--- a/client/src/components/Modal/modal.scss
+++ b/client/src/components/Modal/modal.scss
@@ -4,14 +4,18 @@
   @include flex-center;
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  // left: 0;
+  // right: 0;
+  // bottom: 0;
   z-index: z-index('modal');
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
 
-  .modal-container {
-    border-radius: 0.5rem;
+  .modal-content {
     width: max(30%, 25rem);
-    background-color: $primary-white;
+    margin: 1rem;
+    border-radius: 1rem;
+    background-color: $background-gray;
   }
 }
