--- a/client/src/styles/_common.scss
+++ b/client/src/styles/_common.scss
@@ -19,6 +19,7 @@ $background-gray: rgb(219, 219, 219);
 
 // font color (darker)
 $font-color: rgb(85, 85, 85);
+$font-color-light: rgb(128, 128, 128);
 
 // font Size
 $font-size-base: 1rem; // 16px
