feat: close-icon change

--- a/client/src/components/Login/login.scss
+++ b/client/src/components/Login/login.scss
@@ -11,7 +11,7 @@
     position: absolute;
     top: 1.25rem;
     right: 1rem;
-    color: $font-color-light;
+    color: $btn-gray;
     cursor: pointer;
   }
 
