--- a/client/src/pages/About/about.scss
+++ b/client/src/pages/About/about.scss
@@ -106,9 +106,31 @@
           .icon {
             font-size: 1.25rem;
             padding: 0 0.75rem;
+            cursor: pointer;
           }
         }
       }
+    }
+  }
+  .subscription {
+    @include flex-center;
+    flex-direction: column;
+    text-align: center;
+    gap: 1rem;
+    background-image: url('../../assets/images/subscribe-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 15rem;
+    width: 100%;
+    color: $primary-white;
+
+    input {
+      border: none;
+      outline: none;
+      border-radius: 1rem;
+      height: 2rem;
+      padding: 0 1rem;
+      width: min(70%, 25rem);
     }
   }
 }
