--- a/client/src/components/Header/header.scss
+++ b/client/src/components/Header/header.scss
@@ -10,8 +10,9 @@ header {
   z-index: 1;
 
   .logo {
-    width: 10rem;
+    width: 8rem;
     cursor: pointer;
+    display: flex;
     img {
       width: 100%;
     }
