--- a/client/src/pages/AllCourses/allCourses.scss
+++ b/client/src/pages/AllCourses/allCourses.scss
@@ -1,5 +1,48 @@
 @import '../../styles';
 
 .all-courses {
-  font-size: 10rem;
+  .banner {
+    background-image: url('../../assets/images/banner-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 50vh;
+    padding: 10rem 5%;
+    display: flex;
+    flex-direction: column;
+
+    .search-bar {
+      // border: 1px solid red;
+      background-color: $primary-white;
+      padding: 0.75rem 1rem;
+      border-radius: 0.75rem;
+      box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+      display: flex;
+      align-items: center;
+
+      input {
+        background-color: $primary-white;
+        outline: none;
+        border: none;
+        width: 100%;
+        font-size: 1.75rem;
+      }
+      .search-btn {
+        cursor: pointer;
+        font-size: 1.75rem;
+        color: $primary-blue;
+      }
+    }
+  }
+  .all-courses {
+    border: 1px solid red;
+
+    display: flex;
+    flex-wrap: wrap;
+
+    .course {
+      border: 1px solid blue;
+      flex: 1 1 20rem;
+    }
+  }
 }
