--- a/client/src/pages/AllCourses/allCourses.scss
+++ b/client/src/pages/AllCourses/allCourses.scss
@@ -5,13 +5,14 @@
     background-image: url('../../assets/images/banner-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 50vh;
+    min-height: 100vh;
     padding: 10rem 5%;
     display: flex;
     flex-direction: column;
+    // align-items: flex-start;
+    gap: 5rem;
 
     .search-bar {
-      // border: 1px solid red;
       background-color: $primary-white;
       padding: 0.75rem 1rem;
       border-radius: 0.75rem;
@@ -33,16 +34,42 @@
         color: $primary-blue;
       }
     }
-  }
-  .all-courses {
-    border: 1px solid red;
 
-    display: flex;
-    flex-wrap: wrap;
+    .all-courses {
+      // border: 2px solid red;
 
-    .course {
-      border: 1px solid blue;
-      flex: 1 1 20rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.5rem;
+
+      .course {
+        background-color: $primary-white;
+        border-radius: 0.75rem;
+        box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+        padding: 1.5rem 1rem;
+        flex: 1 1 22.5rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        justify-content: space-between;
+
+        .intro {
+          h2 {
+            padding: 0 0 0.75rem 0;
+          }
+        }
+        .see-more-btn {
+          box-shadow: none;
+          background-color: $background-gray;
+          border-radius: 0.25rem;
+          &:hover {
+            background-color: $primary-green;
+            color: white;
+          }
+        }
+      }
     }
   }
 }
