--- a/client/src/pages/AllCourses/allCourses.scss
+++ b/client/src/pages/AllCourses/allCourses.scss
@@ -39,7 +39,7 @@
       flex-wrap: wrap;
       justify-content: space-between;
       gap: 2rem;
-      .search-msg {
+      .message {
         color: $primary-white;
         font-size: 1.75rem;
         line-height: 1.5;
