--- a/client/src/pages/AllCourses/allCourses.scss
+++ b/client/src/pages/AllCourses/allCourses.scss
@@ -64,6 +64,12 @@
           width: calc(33.333% - 1.333rem);
         }
         .intro {
+          img {
+            width: 100%;
+            height: 15rem;
+            object-fit: cover;
+          }
+
           h2 {
             padding: 0 0 0.75rem 0;
           }
@@ -112,6 +118,12 @@
           width: calc(33.333% - 1.333rem);
         }
         .intro {
+          img {
+            width: 100%;
+            height: 15rem;
+            object-fit: cover;
+          }
+
           h2 {
             padding: 0 0 0.75rem 0;
           }
