--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -199,8 +199,7 @@
       .card {
         background-color: #fff;
         border-radius: 1rem;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-          rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 
         flex: 1 1 15rem;
         display: flex;
@@ -291,28 +290,6 @@
           }
         }
       }
-    }
-  }
-
-  .subscription {
-    @include flex-center;
-    flex-direction: column;
-    text-align: center;
-    gap: 1rem;
-    background-image: url('../../assets/images/subscribe-bg.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 15rem;
-    width: 100%;
-    color: $primary-white;
-
-    input {
-      border: none;
-      outline: none;
-      border-radius: 1rem;
-      height: 2rem;
-      padding: 0 1rem;
-      width: min(70%, 25rem);
     }
   }
 }
