--- a/client/src/pages/Contact/contact.scss
+++ b/client/src/pages/Contact/contact.scss
@@ -99,6 +99,9 @@
               color: $font-color-light;
             }
           }
+          textarea {
+            height: 15rem;
+          }
         }
 
         .submit-btn {
