--- a/client/src/styles/_common.scss
+++ b/client/src/styles/_common.scss
@@ -15,6 +15,7 @@ $secondary-yellow: hsl(39, 76%, 70%);
 $background-blue: rgba(36, 105, 188, 0.504);
 $background-black: rgba(0, 0, 0, 0.7);
 $background-gray: rgb(219, 219, 219);
+$background-white: rgba(219, 219, 219, 0.65);
 
 // btn color
 $btn-gray: rgb(175, 175, 175);
