fix: banner background image 由png改成svg，並且補上background-position屬性來控制圖片位置

--- a/client/src/pages/About/about.scss
+++ b/client/src/pages/About/about.scss
@@ -2,9 +2,10 @@
 
 .about {
   .banner {
-    background-image: url('../../assets/images/banner-bg.png');
+    background-image: url('../../assets/images/banner-bg.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: left center;
     padding: 8.5rem 2.5rem 0 2.5rem;
 
     .introduction {
