--- a/client/src/pages/Contact/contact.scss
+++ b/client/src/pages/Contact/contact.scss
@@ -2,9 +2,10 @@
 
 .contact {
   .banner {
-    background-image: url('../../assets/images/banner-bg.png');
+    background-image: url('../../assets/images/banner-bg.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: right bottom;
     min-height: 100vh;
     padding: 10rem 5% 5rem 5%;
 
