--- a/client/src/pages/AllCourses/allCourses.scss
+++ b/client/src/pages/AllCourses/allCourses.scss
@@ -2,8 +2,9 @@
 
 .all-courses {
   .banner {
-    background-image: url('../../assets/images/banner-bg.png');
+    background-image: url('../../assets/images/banner-bg.svg');
     background-repeat: no-repeat;
+    background-position: left center;
     background-size: cover;
     min-height: 100vh;
     padding: 10rem 5%;
