--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -25,12 +25,13 @@
   flex-direction: column;
   align-items: center;
   .banner {
-    @include flex-center;
-    background-image: url('../../assets/images/banner-bg.png');
+    background-image: url('../../assets/images/banner-bg.svg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: left top;
     min-height: 100vh;
     padding: 10rem 0.2rem;
+    @include flex-center;
 
     .introduction {
       @include flex-center;
