--- a/client/src/components/CourseCards/courseCards.scss
+++ b/client/src/components/CourseCards/courseCards.scss
@@ -22,16 +22,24 @@
     @media (min-width: 80rem) {
       width: calc(33.333% - 1.333rem);
     }
-    .intro {
+
+    .course-img {
       img {
         width: 100%;
         height: 15rem;
         object-fit: cover;
       }
-
+    }
+    .course-intro {
       h2 {
         padding: 0 0 0.75rem 0;
       }
+    }
+    .instructor {
+      font-weight: 600;
+    }
+    .course-price {
+      color: $primary-yellow;
     }
     .see-more-btn {
       box-shadow: none;
