refactor: 移動位置，不影響畫面和功能

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -197,6 +197,12 @@
       flex-wrap: wrap;
       gap: 1rem;
 
+      @media (max-width: 900px) {
+        .courses-cards {
+          flex-direction: column;
+        }
+      }
+
       .card {
         background-color: #fff;
         border-radius: 1rem;
@@ -304,11 +310,5 @@
   }
   100% {
     border-right-color: transparent;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .courses-cards {
-    flex-direction: column;
   }
 }
