--- a/client/src/components/LoginWarning/loginWarning.scss
+++ b/client/src/components/LoginWarning/loginWarning.scss
@@ -2,6 +2,11 @@
 
 .login-warning {
   @include flex-center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   .msg-not-login {
     display: flex;
     flex-direction: column;
@@ -9,6 +14,7 @@
     gap: 2rem;
 
     padding: 2rem;
+    margin: 10rem 1rem;
     width: fit-content;
     border-radius: 2rem;
     background-color: $background-white;
@@ -18,6 +24,9 @@
       color: $primary-red;
       text-align: center;
       letter-spacing: 0.1rem;
+      @media (max-width: 480px) {
+        font-size: 1.5rem;
+      }
     }
     .go-login-btn {
       font-size: 1.25rem;
